# StockageFrontEnd

./: .gitignore  AddNewDataPage.qml  AuthenticationPage.qml  BottomBar.qml  CMakeLists.txt  KeyInput.qml  Main.qml  README.md  StyleButton.qml  StylePopUp.qml  TopBar.qml  main.cpp
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
qml/: BottomBar.qml  StyleButton.qml  StylePopUp.qml  res.qrc
src/: main.cpp
